featured boats refactoring to fix content jumping #1026

--- a/app/assets/stylesheets/rightboat/layout.less
+++ b/app/assets/stylesheets/rightboat/layout.less
@@ -17,12 +17,12 @@ body {
     padding-bottom: 20px;
   }
 }
-#featured-boats {
-  .AzureSection();
-  .assign-gutter(margin-bottom);
-}
 
-#featured-wrap {
+.featured-boats {
+  h3 {
+    .AzureSection();
+    .assign-gutter(margin-bottom);
+  }
   .boat-thumb-container {
     clear: none;
     display: none;
